# geronimo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/tutorials/: batch_jobs.md  getting_started.md  getting_started_batch.md  getting_started_realtime.md  mcp_integration.md  monitoring.md  sdk_reference.md
examples/credit-risk/: README.md  geronimo.yaml  pyproject.toml
examples/credit-risk/infrastructure/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  variables.tf
examples/credit-risk/tests/: test_api.py
examples/iris-batch/: README.md  geronimo.yaml  pyproject.toml
examples/iris-batch/tests/: test_api.py
examples/iris-realtime/: pyproject.toml
examples/iris-realtime/tests/: test_api.py
examples/mcp-project/: README.md  geronimo.yaml  pyproject.toml
examples/mcp-project/tests/: test_api.py
examples/test-ml-project/: .dockerignore  Dockerfile  README.md  azure-pipelines.yaml  geronimo.yaml  pyproject.toml
examples/test-ml-project/infrastructure/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  (+2 more)
examples/verification-project/: README.md  geronimo.yaml  pyproject.toml
src/geronimo/: __init__.py
test-batch/: README.md  geronimo.yaml  pyproject.toml
test-batch/tests/: test_sdk.py
test-realtime/: README.md  geronimo.yaml  pyproject.toml
test-realtime/tests/: test_sdk.py
tests/: conftest.py  test_artifacts.py  test_auth.py  test_auth_middleware.py  test_batch.py  test_cli.py  test_config.py  test_data.py  test_features.py  test_models.py  test_serving.py  test_validation.py
(+60 files in other folders)
